5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1712_2498.log
== TEST (2019-05-08 15:15:52) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A  #variavel acumuladora de A
vcb = B  #variavel acumuladora de B
n = 0 #variavel contadora

while(n < A):
	r = (A * A1)/100
	vca = vca + r
	n = n + 1
	print(vca)
-- OUTPUT:
338953.25
427756.5
516559.75
605363.0
694166.25
782969.5
871772.75
960576.0
1049379.25
1138182.5
1226985.75
1315789.0
1404592.25
1493395.5
1582198.75
1671002.0
1759805.25
1848608.5
1937411.75
2026215.0
2115018.25
2203821.5
2292624.75
2381428.0
2470231.25
2559034.5
2647837.75
2736641.0
2825444.25
2914247.5
3003050.75
3091854.0
3180657.25
3269460.5
3358263.75
3447067.0
3535870.25
3624673.5
3713476.75
3802280.0
3891083.25
3979886.5
4068689.75
4157493.0
4246296.25
4335099.5
4423902.75
4512706.0
4601509.25
4690312.5
4779115.75
4867919.0
4956722.25
5045525.5
5134328.75
5223132.0
5311935.25
5400738.5
5489541.75
5578345.0
5667148.25
5755951.5
5844754.75
5933558.0
6022361.25
6111164.5
6199967.75
6288771.0
6377574.25
6466377.5
6555180.75
6643984.0
6732787.25
6821590.5
6910393.75
6999197.0
7088000.25
7176803.5
7265606.75
7354410.0
7443213.25
7532016.5
7620819.75
7709623.0
7798426.25
7887229.5
7976032.75
8064836.0
8153639.25
8242442.5
8331245.75
8420049.0
8508852.25
8597655.5
8686458.75
8775262.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:16:35) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A  #variavel acumuladora de A
vcb = B  #variavel acumuladora de B
n = 0 #variavel contadora

while(n < A):
	r = (A * A1)/100
	vca = vca + r
	n = n + 1
	print(vca)
-- OUTPUT:
338953.25
427756.5
516559.75
605363.0
694166.25
782969.5
871772.75
960576.0
1049379.25
1138182.5
1226985.75
1315789.0
1404592.25
1493395.5
1582198.75
1671002.0
1759805.25
1848608.5
1937411.75
2026215.0
2115018.25
2203821.5
2292624.75
2381428.0
2470231.25
2559034.5
2647837.75
2736641.0
2825444.25
2914247.5
3003050.75
3091854.0
3180657.25
3269460.5
3358263.75
3447067.0
3535870.25
3624673.5
3713476.75
3802280.0
3891083.25
3979886.5
4068689.75
4157493.0
4246296.25
4335099.5
4423902.75
4512706.0
4601509.25
4690312.5
4779115.75
4867919.0
4956722.25
5045525.5
5134328.75
5223132.0
5311935.25
5400738.5
5489541.75
5578345.0
5667148.25
5755951.5
5844754.75
5933558.0
6022361.25
6111164.5
6199967.75
6288771.0
6377574.25
6466377.5
6555180.75
6643984.0
6732787.25
6821590.5
6910393.75
6999197.0
7088000.25
7176803.5
7265606.75
7354410.0
7443213.25
7532016.5
7620819.75
7709623.0
7798426.25
7887229.5
7976032.75
8064836.0
8153639.25
8242442.5
8331245.75
8420049.0
8508852.25
8597655.5
8686458.75
8775262.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:24:15) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A  #variavel acumuladora de A
vcb = B  #variavel acumuladora de B
n = 0 #variavel contadora

while(B > A):
	r = (A * A1)/100
	vca = vca + r
	n = n + 1
	print(vca)
if(A1 > B1):
	r1 = vcb * B2/100
	vcb = vcb + r1
	n = n + 1
	print(vca)
-- OUTPUT:
338953.25
427756.5
516559.75
605363.0
694166.25
782969.5
871772.75
960576.0
1049379.25
1138182.5
1226985.75
1315789.0
1404592.25
1493395.5
1582198.75
1671002.0
1759805.25
1848608.5
1937411.75
2026215.0
2115018.25
2203821.5
2292624.75
2381428.0
2470231.25
2559034.5
2647837.75
2736641.0
2825444.25
2914247.5
3003050.75
3091854.0
3180657.25
3269460.5
3358263.75
3447067.0
3535870.25
3624673.5
3713476.75
3802280.0
3891083.25
3979886.5
4068689.75
4157493.0
4246296.25
4335099.5
4423902.75
4512706.0
4601509.25
4690312.5
4779115.75
4867919.0
4956722.25
5045525.5
5134328.75
5223132.0
5311935.25
5400738.5
5489541.75
5578345.0
5667148.25
5755951.5
5844754.75
5933558.0
6022361.25
6111164.5
6199967.75
6288771.0
6377574.25
6466377.5
6555180.75
6643984.0
6732787.25
6821590.5
6910393.75
6999197.0
7088000.25
7176803.5
7265606.75
7354410.0
7443213.25
7532016.5
7620819.75
7709623.0
7798426.25
7887229.5
7976032.75
8064836.0
8153639.25
8242442.5
8331245.75
8420049.0
8508852.25
8597655.5
8686458.75
8775262.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:35:33) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A  #variavel acumuladora de A
vcb = B  #variavel acumuladora de B
n = 0 #variavel contadora

while(A<B):
	vca = (A * A1)/100
	vcb = (B * B1)/100
	n = n +1
	print(n)
	
if(A1> B1):
-- ERROR:
File "XXXX", line 17
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:35) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A  #variavel acumuladora de A
vcb = B  #variavel acumuladora de B
n = 0 #variavel contadora

while(A<B):
	vca = (A * A1)/100
	vcb = (B * B1)/100
	n = n +1
	print(n)
	
if(A1> B1):
-- ERROR:
File "XXXX", line 17
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:48) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A  #variavel acumuladora de A
vcb = B  #variavel acumuladora de B
n = 0 #variavel contadora

while(A<B):
	vca = (A * A1)/100
	vcb = (B * B1)/100
	n = n +1
	print(n)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:37:31) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A  #variavel acumuladora de A
vcb = B  #variavel acumuladora de B
n = 0 #variavel contadora

while(A<B):
	vca = (A * A1)/100
	vcb = (B * B1)/100
	n = n +1
	print(n)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:38:08) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca =  A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = A (A * A1)/100
	vcb = B (B * B1)/100
	n = n +1
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    vca = A (A * A1)/100
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:40:46) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = A (A * A1)/100
	vcb = B (B * B1)/100
	n = n +1
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    vca = A (A * A1)/100
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 23:41:33) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = A ((A * A1)/100)
	vcb = B ((B * B1)/100)
	n = n +1
	print(n)
-- EXECUTION TIME:
0.139258
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2498/main.py", line 11, in <module>
    vca = A ((A * A1)/100)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:41:51) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = A +((A * A1)/100)
	vcb = B +((B * B1)/100)
	n = n +1
	print(n)
-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 23:42:55) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n +1
	print(n)
-- EXECUTION TIME:
0.211725
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 23:43:05) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n +1
	print(n)
-- EXECUTION TIME:
0.273262
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:43:40) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n + 1
	print(n)
-- OUTPUT:
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 23:44:25) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n + 1
print(n)
-- EXECUTION TIME:
0.294973
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 23:48:04) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = A +((A * A1)/100)
	vcb = B +((B * B1)/100)
	n = n +1
	print(n)
-- EXECUTION TIME:
366.777
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:26:00) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n + 1
print(n)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:26:18) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n + 1
print(n)
-- EXECUTION TIME:
0.177142
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:31:42) 
-- CODE:
A = int(input("habitantes de uma cidade A: "))
B = int(input("habitantes de uma cidade B: "))
A1 = float(input("percentual de crescimeto populacional A: "))
B1 = float(input("percentual de crescimeto populacional B: "))

vca = A + ((A * A1)/100) #variavel acumuladora de A
vcb = B + ((B * B1)/100)  #variavel acumuladora de B
n = 1 #variavel contadora

while(vca < vcb):
	vca = vca +((vca * A1)/100)
	vcb = vcb +((vcb * B1)/100)
	n = n + 1
print(n)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
